<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/checkBox06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/checkBox06"
                android:textColor="@color/text" />

            <EditText
                android:id="@+id/editText01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:text="0"
                android:inputType="number" >
            </EditText>

            <TextView
                android:id="@+id/textView_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_3"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editText02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:ems="3"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_4"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center" >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteText_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:focusable="true"
            android:gravity="top|left"
            android:scrollbars="vertical"
            android:text="@string/autoCompleteText_text"
            android:singleLine="false" >
        </AutoCompleteTextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/checkBox01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox01"
            android:textColor="@color/text" />

        <CheckBox
            android:id="@+id/checkBox02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/checkBox01"
            android:text="@string/checkBox02"
            android:textColor="@color/text" />

        <CheckBox
            android:id="@+id/checkBox03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/checkBox02"
            android:text="@string/checkBox03"
            android:textColor="@color/text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/checkBox04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox04"
            android:textColor="@color/text" />

        <CheckBox
            android:id="@+id/checkBox05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/checkBox07"
            android:text="@string/checkBox05"
            android:textColor="@color/text" />

        <CheckBox
            android:id="@+id/checkBox07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/checkBox04"
            android:text="@string/checkBox07"
            android:textColor="@color/text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio0"
                android:textColor="@color/text" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio1"
                android:textColor="@color/text" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio2"
                android:textColor="@color/text" />
        </RadioGroup>
    </RelativeLayout>
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >
    <Button
        android:id="@+id/button_printtext"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_printtext"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Button_state"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/button_printtext"
        android:layout_height="wrap_content"
        android:text="@string/button_state"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_cutpaper"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
       android:layout_toRightOf="@+id/Button_state"
        android:text="@string/button_cutpaper"
        android:textSize="20sp" />

</RelativeLayout>
</LinearLayout>