<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!-- bluetooth端口信息 -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="5" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/Text_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Text_bt"
                    android:textSize="20sp" />
            </RelativeLayout>
            <!-- bt的name或者地址 -->


            <!-- bt的 -->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="2dp" >

                <TextView
                    android:id="@+id/Text_btname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Text_btname"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner_btname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Text_btname"
                    android:textColor="#000" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="2dp" >

                <TextView
                    android:id="@+id/Text_btmax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Text_btmax"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edit_btmax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Text_btmax"
                    android:ems="10" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="2dp" >

                <Button
                    android:id="@+id/button_btcon"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/button_btcon"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>